# roe

./: average_scores_by_location.csv  html2table.py  inspections_extracted.csv  m3q2.py  m3q4.py  m4q1.py  m4q5.1.py  m4q5.2.py  m4q5.py  m4q6.csv  m4q6.py  m4q6_94110.csv  m4q7.py  m4q8.py  moderate_risk_violations.csv  ng.py  nq1.py  nq5.ipynb  pyproject.toml  q1.1.py  q1.py  q2.2.ipynb  q2.py  q3.ipynb  q4.py  q5.ipynb
q1/: file1.html  file10.html  file2.html  file3.html  file4.html  file5.html  file6.html  file7.html  file8.html  file9.html
q2/: q.xlsx  students.csv
q4/: city_coordinates.csv
q5/: q-calculate-correlation.json
roe_notes/: notes.md
